030-software/fluxcd/apps/blossom/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blossom
  labels:
    app: blossom
  annotations:
    configmap.reloader.stakater.com/reload: config
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blossom
  template:
    metadata:
      labels:
        app: blossom
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: blossom
      containers:
        - name: blossom
          image: ghcr.io/hzrd149/blossom-server:v6.4@sha256:32585bc131bcb67cc3e9af463f2e72c778cba58b5c37861f009a865b03132581
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /app/config.yml
              subPath: config.yml
              readOnly: true
            - name: data
              mountPath: /app/data
            - name: deno-cache
              mountPath: /deno-dir
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: config
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: deno-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: blossom
                topologyKey: kubernetes.io/hostname
