030-software/fluxcd/apps/blossom/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blossom
  labels:
    app: blossom
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: blossom
