030-software/fluxcd/apps/blossom/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blossom
  annotations:
    dashboard.${domain}/icon: bucket
    dashboard.${domain}/name: blossom
    dashboard.${domain}/url: https://blossom.${domain}
spec:
  hostnames:
    - blossom.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: blossom
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
